A function to read text files

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -84,7 +84,11 @@
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_file(filename):\n",
+    "    with open(filename, 'r') as f:\n",
+    "        return f.read()"
+   ]
   },
   {
    "cell_type": "markdown",
