Function to read use the read_file function. Split filename. Create dictionary with required values. Create dataframe from dictionary.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -87,7 +87,29 @@
    "source": [
     "def read_file(filename):\n",
     "    with open(filename, 'r') as f:\n",
-    "        return f.read()"
+    "        return f.read()\n",
+    "\n",
+    "def read_novels(path=Path.cwd() / \"zips\" / \"p1-texts\" / \"novels\"):\n",
+    "    \"\"\"Reads texts from a directory of .txt files and returns a DataFrame with the text, title,\n",
+    "    author, and year\"\"\"\n",
+    "    files = [file for file in os.listdir(path) if file[-4:] == '.txt']\n",
+    "    df_data = []\n",
+    "\n",
+    "    for i in range(len(files)):\n",
+    "        ''' Create a dictionary, and add the file items to it, then use populated dictionary to create a dataframe '''\n",
+    "        file_dict = {}\n",
+    "        file_dict['text'] = read_file(os.path.join(path,files[i]))\n",
+    "        title, author, year = files[i].split('-')\n",
+    "        file_dict['title'] = title \n",
+    "        file_dict['author'] = author\n",
+    "        file_dict['year'] = year[:-4]\n",
+    "        df_data.append(file_dict)\n",
+    "    df = pd.DataFrame(df_data)     \n",
+    "    df = df.sort_values('year') # return sorted by year (assumed default ascending)\n",
+    "    df.reset_index(inplace=True, drop=True)     \n",
+    "    return df     \n",
+    "    \n",
+    "df = read_novels()"
    ]
   },
   {
