--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -122,6 +122,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d77ee3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nltk_ttr(text):\n",
+    "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
+    "    text_cleaned = [t.lower() for t in word_tokenize(text) if t.isalnum()] # I've assumed that we want the numbers, as well as text.\n",
+    "    vocab = set(text_cleaned) # dedupe words\n",
+    "    ttr = len(vocab) / len(text_cleaned) # ratio words to the text\n",
+    "    return ttr\n",
+    "\n",
+    "\n",
+    "def get_ttrs(df):\n",
+    "    \"\"\"helper function to add ttr to a dataframe\"\"\"\n",
+    "    results = {}\n",
+    "    for i, row in df.iterrows():\n",
+    "        results[row[\"title\"]] = nltk_ttr(row[\"text\"])\n",
+    "    return results\n",
+    "get_ttrs(df)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "223eb32d",
    "metadata": {},
