Work in progress FL-GL function. Currently only counts a word once when calculating syllables - but this needs to be total syllables (allow duplicates). Next - use temp dictionary, and each word get count. temp dict value * word count = total syllables for that word

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -168,6 +168,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4017d55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import nltk \n",
+    "def fk_level(text, d):\n",
+    "    \"\"\"Returns the Flesch-Kincaid Grade Level of a text (higher grade is more difficult).\n",
+    "    Requires a dictionary of syllables per word.\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): The text to analyze.\n",
+    "        d (dict): A dictionary of syllables per word.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The Flesch-Kincaid Grade Level of the text. (higher grade is more difficult)\n",
+    "    \"\"\"\n",
+    "    sents=sent_tokenize(text.lower())\n",
+    "    words=[t.lower() for t in word_tokenize(text) if t.isalpha()]\n",
+    "    temp = dict()\n",
+    "        \n",
+    "    for word in words:\n",
+    "        cmu_counter = 0\n",
+    "        if word in d:\n",
+    "            temp[word] = None\n",
+    "            for values in d[word]:\n",
+    "                counts = 0 # return the maximum value\n",
+    "                for value in values:\n",
+    "                    v = sum(char[-1].isdigit() for char in value)\n",
+    "                    counts += v\n",
+    "                    '''  WIP  - not quite right - dictionary counts each word once...\n",
+    "                    if temp[word] == None:\n",
+    "                        temp[word]= counts\n",
+    "                    else:\n",
+    "                        if counts > temp[word]:\n",
+    "                            temp[word]= counts\n",
+    "                    '''\n",
+    "    total_syllables = sum(temp.values()) #! this isn't quite right - it has in effect deduplicated the words whereas the other sums do not\n",
+    "    fkl = 0.39 * (len(words) / len(sents)) + 11.8 * (total_syllables/ len(words))- 15.59\n",
+    "    print(total_syllables, len(words), len(sents))\n",
+    "\n",
+    "    return fkl\n",
+    "\n",
+    "\n",
+    "def get_fks(df):\n",
+    "    \"\"\"helper function to add fk scores to a dataframe\"\"\"\n",
+    "    results = {}\n",
+    "    cmudict = nltk.corpus.cmudict.dict()\n",
+    "    for i, row in df.iterrows():\n",
+    "        results[row[\"title\"]] = round(fk_level(row[\"text\"], cmudict), 4)\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "get_fks(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3762e657",
    "metadata": {},
