Note to self and moving a default function for syllables

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -168,6 +168,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9601f0f7",
+   "metadata": {},
+   "source": [
+    "Work in progress FL-GL function.\n",
+    "Currently only counts a word once when calculating syllables - but this needs to be total syllables (allow duplicates).\n",
+    "Next - use temp dictionary, and each word get count.\n",
+    "temp dict value * word count = total syllables for that word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b097f9fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_syl(word, d):\n",
+    "    \"\"\"Counts the number of syllables in a word given a dictionary of syllables per word.\n",
+    "    if the word is not in the dictionary, syllables are estimated by counting vowel clusters\n",
+    "\n",
+    "    Args:\n",
+    "        word (str): The word to count syllables for.\n",
+    "        d (dict): A dictionary of syllables per word.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The number of syllables in the word.\n",
+    "    \"\"\"\n",
+    "    pass\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f4017d55",
@@ -259,6 +291,12 @@
     "- ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n",
     "- iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884d607e",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
