Adding in the template functions

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -281,6 +281,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ad318b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
+    "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes \n",
+    "    the resulting  DataFrame to a pickle file\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b56f494c",
    "metadata": {},
@@ -293,10 +307,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "884d607e",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def adjective_counts(doc):\n",
+    "    \"\"\"Extracts the most common adjectives in a parsed document. Returns a list of tuples.\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def subjects_by_verb_pmi(doc, target_verb):\n",
+    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "def subjects_by_verb_count(doc, verb):\n",
+    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,6 +346,41 @@
    "source": [
     "## g) Ten marks are allocated for your github commit history. \n",
     "You should make regular, atomic commits with concise but informative commit messages. See the section titled Submission (both questions) for more details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27b9f339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    \"\"\"\n",
+    "    uncomment the following lines to run the functions once you have completed them\n",
+    "    \"\"\"\n",
+    "    #path = Path.cwd() / \"p1-texts\" / \"novels\"\n",
+    "    #print(path)\n",
+    "    #df = read_novels(path) # this line will fail until you have completed the read_novels function above.\n",
+    "    #print(df.head())\n",
+    "    #nltk.download(\"cmudict\")\n",
+    "    #parse(df)\n",
+    "    #print(df.head())\n",
+    "    #print(get_ttrs(df))\n",
+    "    #print(get_fks(df))\n",
+    "    #df = pd.read_pickle(Path.cwd() / \"pickles\" /\"name.pickle\")\n",
+    "    # print(adjective_counts(df))\n",
+    "    \"\"\" \n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row[\"title\"])\n",
+    "        print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
+    "        print(\"\\n\")\n",
+    "\n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row[\"title\"])\n",
+    "        print(subjects_by_verb_pmi(row[\"parsed\"], \"hear\"))\n",
+    "        print(\"\\n\")\n",
+    "    \"\"\""
    ]
   },
   {
