Yet to be tested - create spacy docs for text in dataframe, save to pickle. Another function to load from pickle.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -289,9 +289,16 @@
    "source": [
     "\n",
     "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
-    "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes \n",
-    "    the resulting  DataFrame to a pickle file\"\"\"\n",
-    "    pass"
+    "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes the resulting  DataFrame to a pickle file\"\"\"\n",
+    "    df['docs'] = [nlp(line) for line in df['text']] # create spacy docs for each cell \"text\"\n",
+    "    df.to_pickle(os.path.join(store_path,out_name)) # write to pickle\n",
+    "    return df\n",
+    "    \n",
+    "def load_from_pickle(store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
+    "    df = pd.read_pickle(os.path.join(store_path, out_name))\n",
+    "    return df\n",
+    "\n",
+    "#! NOT TESTED"
    ]
   },
   {
