Adding some markdown. Regex for vowel clusters

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -150,7 +150,7 @@
    "id": "223eb32d",
    "metadata": {},
    "source": [
-    "## c) flesch_kincaid:\n",
+    "## c) flesch_kincaid: WIP\n",
     "This function should return a dictionary mapping the title of each novel to the Flesch-Kincaid reading grade level score of the text.  \n",
     "Use the NLTK library for tokenization and the CMU pronouncing dictionary for estimating syllable counts."
    ]
@@ -183,9 +183,21 @@
    "execution_count": null,
    "id": "b097f9fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def count_syl(word, d):\n",
+    "    import re\n",
     "    \"\"\"Counts the number of syllables in a word given a dictionary of syllables per word.\n",
     "    if the word is not in the dictionary, syllables are estimated by counting vowel clusters\n",
     "\n",
@@ -196,7 +208,13 @@
     "    Returns:\n",
     "        int: The number of syllables in the word.\n",
     "    \"\"\"\n",
-    "    pass\n"
+    "\n",
+    "    pattern = r'[aeiouy]+'\n",
+    "\n",
+    "    vowel_words = re.findall(pattern, text.lower())\n",
+    "    n_vowel_clusters = len(vowel_words)\n",
+    "    pass\n",
+    "\n"
    ]
   },
   {
@@ -263,7 +281,7 @@
    "id": "3762e657",
    "metadata": {},
    "source": [
-    "## d) flesch_kincaid\n",
+    "## d) flesch_kincaid **todo**\n",
     "When is the Flesch Kincaid score *not* a valid, robust or reliable estimator of text difficulty? Give two conditions. (Text answer, 200 words maximum)."
    ]
   },
@@ -272,7 +290,7 @@
    "id": "4a5f6997",
    "metadata": {},
    "source": [
-    "## e) parse:\n",
+    "## e) parse: WIP\n",
     "The goal of this function is to process the texts with spaCy’s tokenizer and parser, and store the processed texts. Your completed function should: \n",
     "- i. Use the spaCy nlp method to add a new column to the dataframe that contains parsed and tokenized Doc objects for each text. \n",
     "- ii. Serialise the resulting dataframe (i.e., write it out to disk) using the pickle format. \n",
@@ -302,12 +320,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2208444b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "b56f494c",
    "metadata": {},
    "source": [
-    "## f) Working with parses: \n",
-    "the final lines of the code template contain three for loops. Write the functions needed to complete these loops so that they print: \n",
+    "## f) Working with parses: **todo**\n",
+    "the final lines of the code template contain three `for` loops. Write the functions needed to complete these loops so that they print: \n",
     "- i. The title of each novel and a list of the ten most common syntactic objects overall in the text. \n",
     "- ii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their frequency. \n",
     "- iii. The title of each novel and a list of the ten most common syntactic subjects of the verb ‘to hear’ (in any tense) in the text, ordered by their Pointwise Mutual Information."
