Function for 2a) to read the csv

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -440,6 +440,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b39de8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a990e312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def csv_to_df(path=Path.cwd() / \"zips\" / \"p2-texts\"):\n",
+    "    df = pd.read_csv(os.path.join(path,os.listdir(path)[0]))\n",
+    "\n",
+    "    #^ - i. rename the ‘Labour (Co-op)’ value in ‘party’ column to ‘Labour’, and then: \n",
+    "    df['party'].replace(\"Labour (Co-op)\", \"Labour\", inplace=True)\n",
+    "\n",
+    "\n",
+    "    #^ - ii. remove any rows where the value of the ‘party’ column is not one of the four most common party names, and remove the ‘Speaker’ value. \n",
+    "    values = ['Conservative', 'Labour', 'Scottish National Party', 'Liberal Democrat',]\n",
+    "    df = df[df['party'].isin(values)]\n",
+    "\n",
+    "    #^ - iii. remove any rows where the value in the ‘speech_class’ column is not ‘Speech’. \n",
+    "    df = df[df['speech_class'] == 'Speech']\n",
+    "\n",
+    "    df.reset_index(drop=True, inplace=True) #? NB: needs reseting, otherwise the next step doesn't work\n",
+    "\n",
+    "\n",
+    "    #^ - iv. remove any rows where the text in the ‘speech’ column is less than 1000 characters long\n",
+    "    # indices= []\n",
+    "    ind= []\n",
+    "    for i, s in enumerate(df['speech'].values):\n",
+    "        # print(len(s))\n",
+    "        if len(s) < 1000:\n",
+    "            # indices.append((i, len(s)))\n",
+    "            ind.append(i)\n",
+    "\n",
+    "    df = df[~df.index.isin(ind)]\n",
+    "\n",
+    "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
+    "    # len(df) == 36223-28139\n",
+    "    print(df.shape)\n",
+    "    return df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07271048",
    "metadata": {},
