Call of function

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -495,6 +495,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49eb3912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = csv_to_df()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07271048",
    "metadata": {},
