Markdown - value_counts for hansard

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -440,6 +440,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c03c8fc",
+   "metadata": {},
+   "source": [
+    "Assuming we ignore blanks (`NaN`)\n",
+    "\n",
+    "`df['speech_class'].value_counts(dropna=False)`\n",
+    "```\n",
+    "party\n",
+    "Conservative                        25079\n",
+    "Labour                               8038\n",
+    "Scottish National Party              2303\n",
+    "NaN                                  1647\n",
+    ".....\n",
+    "\n",
+    "`df['speech_class'].value_counts()`\n",
+    "The top 4n less \"Speaker\"\n",
+    "party\n",
+    "Conservative                        25079\n",
+    "Labour                               8038\n",
+    "Scottish National Party              2303\n",
+    "Liberal Democrat                      803\n",
+    ".....\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b39de8e",
