Count syllables function for words, using cmu. Also a test (function v local process - to view the word, cmu value, count)

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -110,6 +110,77 @@
     "    return df     \n",
     "    \n",
     "df = read_novels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e1beddc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
+       "      <td>Sense_and_Sensibility</td>\n",
+       "      <td>Austen</td>\n",
+       "      <td>1811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
+       "      <td>North_and_South</td>\n",
+       "      <td>Gaskell</td>\n",
+       "      <td>1855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text                  title  \\\n",
+       "0  \\nCHAPTER 1\\n\\nThe family of Dashwood had long...  Sense_and_Sensibility   \n",
+       "1  'Wooed and married and a'.'\\n'Edith!' said Mar...        North_and_South   \n",
+       "\n",
+       "    author  year  \n",
+       "0   Austen  1811  \n",
+       "1  Gaskell  1855  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[0:2]"
    ]
   },
   {
@@ -183,19 +254,10 @@
    "execution_count": null,
    "id": "b097f9fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import re\n",
+    "from nltk.corpus import cmudict\n",
     "def count_syl(word, d):\n",
     "    import re\n",
     "    \"\"\"Counts the number of syllables in a word given a dictionary of syllables per word.\n",
@@ -208,13 +270,66 @@
     "    Returns:\n",
     "        int: The number of syllables in the word.\n",
     "    \"\"\"\n",
-    "\n",
+    "    counts = 0\n",
     "    pattern = r'[aeiouy]+'\n",
     "\n",
-    "    vowel_words = re.findall(pattern, text.lower())\n",
-    "    n_vowel_clusters = len(vowel_words)\n",
-    "    pass\n",
-    "\n"
+    "    if word in d:\n",
+    "        word_cmu = d[word][0]\n",
+    "        counts += sum(char[-1].isdigit() for char in word_cmu)\n",
+    "    elif word not in d:\n",
+    "        vowel_words = re.findall(pattern, word.lower())\n",
+    "        counts += len(vowel_words)\n",
+    "    return counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc007655",
+   "metadata": {},
+   "source": [
+    "### Test for `count_syl()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeaacaba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "[('the', 1), ('family', 3), ('of', 1), ('dashwood', 2), ('had', 1), ('long', 1), ('been', 1), ('settled', 2), ('in', 1), ('sussex', 2), ('aaaa', 1), ('maaattaan', 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# text = df['text'][0]\n",
+    "# pattern = r'chapter [0-9] +'\n",
+    "# text = text.replace('\\n', ' ').strip()\n",
+    "# text = re.sub(pattern, '', text.lower())\n",
+    "# d = cmudict.dict()\n",
+    "# sents=sent_tokenize(text.lower())\n",
+    "# words=[t.lower() for t in word_tokenize(text) if t.isalpha()]\n",
+    "\n",
+    "# x = words[0:10] # sample of the words\n",
+    "\n",
+    "# ''' Manual text of the function vs local use of the cmu dictionary '''\n",
+    "\n",
+    "# temp=dict()\n",
+    "# for i in x:\n",
+    "#     counts=0\n",
+    "#     word_cmu = d[i][0]\n",
+    "#     counts += sum(char[-1].isdigit() for char in word_cmu)\n",
+    "#     temp[i] = (counts, word_cmu)\n",
+    "# print([t[0] for t in temp.values()] == [count_syl(i, d) for i in x])\n",
+    "\n",
+    "# ''' And a test with some words not in the cmu dictionary'''\n",
+    "# y = ['aaaa', 'maaattaan']\n",
+    "# z = x+y\n",
+    "# print(list(zip(z,[count_syl(i, d) for i in z])))"
    ]
   },
   {
@@ -518,7 +633,7 @@
     "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
     "    # len(df) == 36223-28139\n",
     "    print(df.shape)\n",
-    "    return df"
+    "    return df #? Although this might not be wanted? \"Function to print and nothing else?\""
    ]
   },
   {
@@ -528,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = csv_to_df()\n"
+    "df = csv_to_df()"
    ]
   },
   {
