FKS score functions - and one to add the scores to the dataframe

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
    "id": "223eb32d",
    "metadata": {},
    "source": [
-    "## c) flesch_kincaid: WIP\n",
+    "## c) flesch_kincaid\n",
     "This function should return a dictionary mapping the title of each novel to the Flesch-Kincaid reading grade level score of the text.  \n",
     "Use the NLTK library for tokenization and the CMU pronouncing dictionary for estimating syllable counts."
    ]
@@ -240,18 +240,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9601f0f7",
+   "id": "6a51dde5",
    "metadata": {},
    "source": [
-    "Work in progress FL-GL function.\n",
-    "Currently only counts a word once when calculating syllables - but this needs to be total syllables (allow duplicates).\n",
-    "Next - use temp dictionary, and each word get count.\n",
-    "temp dict value * word count = total syllables for that word"
+    "### `count_syl()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b097f9fc",
    "metadata": {},
    "outputs": [],
@@ -259,7 +256,6 @@
     "import re\n",
     "from nltk.corpus import cmudict\n",
     "def count_syl(word, d):\n",
-    "    import re\n",
     "    \"\"\"Counts the number of syllables in a word given a dictionary of syllables per word.\n",
     "    if the word is not in the dictionary, syllables are estimated by counting vowel clusters\n",
     "\n",
@@ -287,7 +283,7 @@
    "id": "fc007655",
    "metadata": {},
    "source": [
-    "### Test for `count_syl()`"
+    "##### Test for `count_syl()`"
    ]
   },
   {
@@ -329,7 +325,16 @@
     "# ''' And a test with some words not in the cmu dictionary'''\n",
     "# y = ['aaaa', 'maaattaan']\n",
     "# z = x+y\n",
-    "# print(list(zip(z,[count_syl(i, d) for i in z])))"
+    "# print(list(zip(z,[count_syl(i, d) for i in z])))\n",
+    "# print(sum([count_syl(word, d) for word in z]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48e405d",
+   "metadata": {},
+   "source": [
+    "### `fk_level()`, `get_fks()`, `add_fks_to_df()`"
    ]
   },
   {
@@ -352,29 +357,17 @@
     "    Returns:\n",
     "        float: The Flesch-Kincaid Grade Level of the text. (higher grade is more difficult)\n",
     "    \"\"\"\n",
+    "    text = text.replace('\\n', ' ').strip() #* And removing line breaks \"\\n\"\n",
+    "    \n",
+    "    pattern = r'chapter [0-9] +' #* adding this so that chapter breaks are not counted\n",
+    "    text = re.sub(pattern, '', text.lower())\n",
+    "    \n",
     "    sents=sent_tokenize(text.lower())\n",
     "    words=[t.lower() for t in word_tokenize(text) if t.isalpha()]\n",
     "    temp = dict()\n",
-    "        \n",
-    "    for word in words:\n",
-    "        cmu_counter = 0\n",
-    "        if word in d:\n",
-    "            temp[word] = None\n",
-    "            for values in d[word]:\n",
-    "                counts = 0 # return the maximum value\n",
-    "                for value in values:\n",
-    "                    v = sum(char[-1].isdigit() for char in value)\n",
-    "                    counts += v\n",
-    "                    '''  WIP  - not quite right - dictionary counts each word once...\n",
-    "                    if temp[word] == None:\n",
-    "                        temp[word]= counts\n",
-    "                    else:\n",
-    "                        if counts > temp[word]:\n",
-    "                            temp[word]= counts\n",
-    "                    '''\n",
-    "    total_syllables = sum(temp.values()) #! this isn't quite right - it has in effect deduplicated the words whereas the other sums do not\n",
+    "    total_syllables = sum([count_syl(word, d) for word in words])\n",
     "    fkl = 0.39 * (len(words) / len(sents)) + 11.8 * (total_syllables/ len(words))- 15.59\n",
-    "    print(total_syllables, len(words), len(sents))\n",
+    "    # print(total_syllables, len(words), len(sents), fkl)\n",
     "\n",
     "    return fkl\n",
     "\n",
@@ -387,8 +380,197 @@
     "        results[row[\"title\"]] = round(fk_level(row[\"text\"], cmudict), 4)\n",
     "    return results\n",
     "\n",
-    "\n",
-    "get_fks(df)"
+    "def add_fks_to_df(df):\n",
+    "    ''' function to add scores to the dataframe, as referenced in get_fks() '''\n",
+    "    fks = get_fks(df)\n",
+    "    temp = pd.DataFrame({'title_f': fks.keys(), 'fks':fks.values()})\n",
+    "    df = df.merge(temp, left_on='title', right_on='title_f')\n",
+    "    return df.drop(columns='title_f')\n",
+    "df = add_fks_to_df(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "93cf658f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "      <th>fks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
+       "      <td>Sense_and_Sensibility</td>\n",
+       "      <td>Austen</td>\n",
+       "      <td>1811</td>\n",
+       "      <td>10.8901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
+       "      <td>North_and_South</td>\n",
+       "      <td>Gaskell</td>\n",
+       "      <td>1855</td>\n",
+       "      <td>6.6582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Book the First--Recalled to Life\\n\\n\\n\\n\\nI. T...</td>\n",
+       "      <td>A_Tale_of_Two_Cities</td>\n",
+       "      <td>Dickens</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>9.8544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SAMUEL BUTLER.\\nAugust 7, 1901\\n\\nCHAPTER I: W...</td>\n",
+       "      <td>Erewhon</td>\n",
+       "      <td>Butler</td>\n",
+       "      <td>1872</td>\n",
+       "      <td>14.6960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>THE AMERICAN\\n\\nby Henry James\\n\\n\\n1877\\n\\n\\n...</td>\n",
+       "      <td>The_American</td>\n",
+       "      <td>James</td>\n",
+       "      <td>1877</td>\n",
+       "      <td>8.0944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>\\nThe Picture of Dorian Gray\\n\\nby\\n\\nOscar Wi...</td>\n",
+       "      <td>Dorian_Gray</td>\n",
+       "      <td>Wilde</td>\n",
+       "      <td>1890</td>\n",
+       "      <td>4.9591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Phase the First: The Maiden\\n\\n\\nI\\n\\n\\nOn an ...</td>\n",
+       "      <td>Tess_of_the_DUrbervilles</td>\n",
+       "      <td>Hardy</td>\n",
+       "      <td>1891</td>\n",
+       "      <td>7.6502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>BOOK FIRST: THE PRINCE\\n\\n\\n\\n\\nPART FIRST\\n\\n...</td>\n",
+       "      <td>The_Golden_Bowl</td>\n",
+       "      <td>James</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>12.4345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>THE SECRET GARDEN\\n\\nBY FRANCES HODGSON BURNET...</td>\n",
+       "      <td>The_Secret_Garden</td>\n",
+       "      <td>Burnett</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>4.6554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Chapter 1\\n\\nOnce upon a time and a very good ...</td>\n",
+       "      <td>Portrait_of_the_Artist</td>\n",
+       "      <td>Joyce</td>\n",
+       "      <td>1916</td>\n",
+       "      <td>6.4773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>\\nTHE BLACK MOTH\\n\\nA ROMANCE OF THE XVIII CEN...</td>\n",
+       "      <td>The_Black_Moth</td>\n",
+       "      <td>Heyer</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>4.2303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ORLANDO\\n\\nA BIOGRAPHY\\n\\nBY\\n\\nVIRGINIA WOOLF...</td>\n",
+       "      <td>Orlando</td>\n",
+       "      <td>Woolf</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>9.5710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Your ideas are terrifying and your hearts are ...</td>\n",
+       "      <td>Blood_Meridian</td>\n",
+       "      <td>McCarthy</td>\n",
+       "      <td>1930</td>\n",
+       "      <td>5.6336</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 text  \\\n",
+       "0   \\nCHAPTER 1\\n\\nThe family of Dashwood had long...   \n",
+       "1   'Wooed and married and a'.'\\n'Edith!' said Mar...   \n",
+       "2   Book the First--Recalled to Life\\n\\n\\n\\n\\nI. T...   \n",
+       "3   SAMUEL BUTLER.\\nAugust 7, 1901\\n\\nCHAPTER I: W...   \n",
+       "4   THE AMERICAN\\n\\nby Henry James\\n\\n\\n1877\\n\\n\\n...   \n",
+       "5   \\nThe Picture of Dorian Gray\\n\\nby\\n\\nOscar Wi...   \n",
+       "6   Phase the First: The Maiden\\n\\n\\nI\\n\\n\\nOn an ...   \n",
+       "7   BOOK FIRST: THE PRINCE\\n\\n\\n\\n\\nPART FIRST\\n\\n...   \n",
+       "8   THE SECRET GARDEN\\n\\nBY FRANCES HODGSON BURNET...   \n",
+       "9   Chapter 1\\n\\nOnce upon a time and a very good ...   \n",
+       "10  \\nTHE BLACK MOTH\\n\\nA ROMANCE OF THE XVIII CEN...   \n",
+       "11  ORLANDO\\n\\nA BIOGRAPHY\\n\\nBY\\n\\nVIRGINIA WOOLF...   \n",
+       "12  Your ideas are terrifying and your hearts are ...   \n",
+       "\n",
+       "                       title    author  year      fks  \n",
+       "0      Sense_and_Sensibility    Austen  1811  10.8901  \n",
+       "1            North_and_South   Gaskell  1855   6.6582  \n",
+       "2       A_Tale_of_Two_Cities   Dickens  1858   9.8544  \n",
+       "3                    Erewhon    Butler  1872  14.6960  \n",
+       "4               The_American     James  1877   8.0944  \n",
+       "5                Dorian_Gray     Wilde  1890   4.9591  \n",
+       "6   Tess_of_the_DUrbervilles     Hardy  1891   7.6502  \n",
+       "7            The_Golden_Bowl     James  1904  12.4345  \n",
+       "8          The_Secret_Garden   Burnett  1911   4.6554  \n",
+       "9     Portrait_of_the_Artist     Joyce  1916   6.4773  \n",
+       "10            The_Black_Moth     Heyer  1926   4.2303  \n",
+       "11                   Orlando     Woolf  1928   9.5710  \n",
+       "12            Blood_Meridian  McCarthy  1930   5.6336  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
